--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "an astrophotography web app",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
+    "server": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
